# webhdfsmagic

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  DEMO_BRANCH_SUMMARY.md  DEMO_README.md  LOGGING.md  MANIFEST.in  README.md  README_DEMO.md  ROADMAP.md  TESTING.md  TESTING_ENVIRONMENT.md  pyproject.toml  requirements.txt  setup.py  test_hdfs_connection.py
demo/: Dockerfile.knox  README.md  cleanup.sh  docker-compose.yml  knox-init.sh  nginx.conf  test_hdfs_connection.py
demo/knox-config/: gateway-site.xml  topology.xml
docs/: create_complete_demo.py  demo.cast
examples/: README.md  customers.csv  debug_autoload.ipynb  demo.ipynb  demo_complete.ipynb  demo_quick_start.ipynb  demo_real_cluster.ipynb  examples.ipynb  sales_20251202.csv  sales_20251203.csv  sales_20251204.csv  test_data.csv  test_local_hdfs.ipynb  test_mock.py  tutorial_with_mock.ipynb
examples/config/: .gitignore  README.md  config_minimal.json  config_no_ssl.json  config_with_cert.json  config_with_ssl.json
scripts/: check_help.py  test_gitignore.sh
tests/: README.md  conftest.py  test_autoload.py  test_base_command.py  test_client.py  test_complete_coverage.py  test_config.py  test_config_integration.py  test_coverage_100.py  test_directory_ops.py  test_file_ops.py  test_file_ops_parallel.py  test_file_ops_unit.py  test_logger.py  test_magics.py  test_magics_coverage.py  test_permission_ops.py  test_smart_cat.py  test_utils.py
webhdfsmagic/: __init__.py  install.py  magics.py  utils.py
webhdfsmagic/commands/: __init__.py  directory_ops.py  file_ops.py  (+1 more)
